[metadata]
name = filmfest
author = Stas Rudakou
author-email = stas@garage22.net
summary = filmfest.by - official website of Cinema Perpetuum Mobile film festival
home-page = https://github.com/kinaklub/filmfest.by
license = WTFPL

[files]
packages =
    apps
    cpm
    cpm_cms_plugins
    events
    festhome_import
    filmfest
modules =
    manage

[entry_points]
console_scripts =
    filmfest_manage = manage:main
